--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
