--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/store": "^16.3.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
     "rxjs": "~7.8.0",
